Fix pom.xml: add Paper repository

--- a/pom.xml
+++ b/pom.xml
@@ -21,4 +21,11 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>papermc-repo</id>
+      <url>https://papermc.io/repo/repository/maven-public/</url>
+    </repository>
+  </repositories>
 </project>
