--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:   # <-- allows you to manually run the workflow
+  workflow_dispatch:   # <-- this enables the "Run workflow" button
 
 jobs:
   build:
